--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 body{
     background-color: bisque;
+    font-family: monospace, 'sans-serif';
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+h1{
+    font-size: 42px;
+    text-align: center;
+    padding:20px;
+}
+
+button{
+    padding:30px;
+    width:300px;
+    font-size:30px;
+    background-color: dodgerblue;
+    color:rgb(255, 255, 255);
+    border-radius: 5px;
+    border-color: rgb(255, 255, 255);
+    border-style: solid;
+    border-width: 2px;
+}
+
