--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,12 @@ button{
     border-width: 2px;
 }
 
+.your-score, .computer-score{
+    padding: 20px;
+    text-align: center;
+    font-size:20px;
+}
+
+.score-container{
+    padding:10px;
+}
